[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/DiceReceiver.gd" type="Script" id=1]
[ext_resource path="res://UI/DiceButton.tscn" type="PackedScene" id=2]

[node name="DiceReceiver" type="Control"]
modulate = Color( 0.56, 0.56, 0.56, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1552.0
margin_bottom = -1152.0
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DiceButton" parent="." instance=ExtResource( 2 )]
[connection signal="mouse_entered" from="." to="." method="_on_DiceReceiver_mouse_entered"]
[connection signal="mouse_exited" from="DiceButton" to="." method="_on_DiceButton_mouse_exited"]
[connection signal="picked" from="DiceButton" to="." method="_on_DiceButton_picked"]
